--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ node_modules/
 img/
 connection/connect.php
 admin/api/users/config.php
+templates/external_scripts/nouislider.min.css
+templates/external_scripts/nouislider.min.js
+templates/external_scripts/nouislider.js
+templates/external_scripts/nouislider.css
